8329420: Java 22 (and 23) launcher calls default constructor although main() is static